reccomended for you section

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
+    <!--Front Cover-->
     <div class="hero">
       <header class="header">
         <div class="logo">
@@ -71,7 +72,82 @@
         </div>
       </div>
     </div>
-
+    <!--end of Front Cover-->
+    <!--Reccomended for you-->
+    <div>
+      <div class="content-container">
+        <section class="countries">
+          <h2>Reccomended for you</h2>
+          <div class="cards-container">
+            <div class="card">
+              <img src="img/recommended1.jpg" alt="destination" />
+              <div class="info">
+                <div class="title">Austria</div>
+                <div class="price">$599.95/night average</div>
+              </div>
+            </div>
+            <!--.card-->
+            <div class="card">
+              <img src="img/recommended2.jpg" alt="destination" />
+              <div class="info">
+                <div class="title">France</div>
+                <div class="price">$1,599.95/night average</div>
+              </div>
+            </div>
+            <!--.card-->
+            <div class="card">
+              <img src="img/recommended3.jpg" alt="destination" />
+              <div class="info">
+                <div class="title">Greece</div>
+                <div class="price">$799.95/night average</div>
+              </div>
+            </div>
+            <!--.card-->
+            <div class="card">
+              <img src="img/recommended4.jpg" alt="destination" />
+              <div class="info">
+                <div class="title">England</div>
+                <div class="price">$999.95/night average</div>
+              </div>
+            </div>
+            <!--.card-->
+            <div class="card">
+              <img src="img/recommended5.jpg" alt="destination" />
+              <div class="info">
+                <div class="title">Spain</div>
+                <div class="price">$1,299.95/night average</div>
+              </div>
+            </div>
+            <!--.card-->
+            <div class="card">
+              <img src="img/recommended6.jpg" alt="destination" />
+              <div class="info">
+                <div class="title">Gary, Indiana</div>
+                <div class="price">$29.95/night average</div>
+              </div>
+            </div>
+            <!--.card-->
+            <div class="card">
+              <img src="img/recommended7.jpg" alt="destination" />
+              <div class="info">
+                <div class="title">Singapore</div>
+                <div class="price">$389.95/night average</div>
+              </div>
+            </div>
+            <!--.card-->
+            <div class="card">
+              <img src="img/recommended8.jpg" alt="destination" />
+              <div class="info">
+                <div class="title">South Korea</div>
+                <div class="price">$799.95/night average</div>
+              </div>
+            </div>
+            <!--.card-->
+          </div>
+          <!--cards-container-->
+        </section>
+      </div>
+    </div>
     <script src="js/scripts.js"></script>
   </body>
 </html>
