--- a/index.html
+++ b/index.html
@@ -120,26 +120,10 @@
             </div>
             <!--.card-->
             <div class="card">
-              <img src="img/recommended6.jpg" alt="destination" />
-              <div class="info">
-                <div class="title">Gary, Indiana</div>
-                <div class="price">$29.95/night average</div>
-              </div>
-            </div>
-            <!--.card-->
-            <div class="card">
-              <img src="img/recommended7.jpg" alt="destination" />
+              <img src="img/recommended6.jpeg" alt="destination" />
               <div class="info">
                 <div class="title">Singapore</div>
                 <div class="price">$389.95/night average</div>
-              </div>
-            </div>
-            <!--.card-->
-            <div class="card">
-              <img src="img/recommended8.jpg" alt="destination" />
-              <div class="info">
-                <div class="title">South Korea</div>
-                <div class="price">$799.95/night average</div>
               </div>
             </div>
             <!--.card-->
@@ -164,7 +148,7 @@
               <img src="img/explore2.jpg" />
               <div class="info">
                 <p class="category concert">concert</p>
-                <p class="title">MONSTA X x True Damage Concert</p>
+                <p class="title">MONSTA X x EXO Concert</p>
                 <p class="price">$1,089.89 per person</p>
               </div>
             </div>
@@ -296,7 +280,7 @@
               <img src="img/topexp4.jpg" />
               <div class="info">
                 <p class="category sports">sports</p>
-                <p class="title">Horseland IRL</p>
+                <p class="title">Horseland!</p>
                 <p class="price">$100 per person</p>
               </div>
             </div>
@@ -323,7 +307,7 @@
               <img src="img/topexp7.jpg" />
               <div class="info">
                 <p class="category concert">concert</p>
-                <p class="title">Ratchet Coachella</p>
+                <p class="title">NorCal Coachella</p>
                 <p class="price">$420.69 per person</p>
               </div>
             </div>
