reworded event descriptions

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
               <div class="info">
                 <p class="category celebrities">celebrities</p>
                 <p class="title">
-                  Watch Kim and Don livestream Fortnite at The Embarcadero
+                  Watch the Kardashians livestream Fortnite at The Embarcadero
                 </p>
                 <p class="price">$159.99 admission</p>
               </div>
@@ -289,7 +289,7 @@
               <img src="img/topexp5.jpg" />
               <div class="info">
                 <p class="category celebrities">celebrities</p>
-                <p class="title">Ariana Grande Donut Licking Festival</p>
+                <p class="title">Ariana Grande's Donut Festival</p>
                 <p class="price">$500 admission</p>
               </div>
             </div>
