--- a/index.html
+++ b/index.html
@@ -363,8 +363,14 @@
                 ><span>Facebook</span></a>
               <a href="http://instagram.com" target="_blank"
                 ><span>Instagram</span></a>
-              <a href="http://twitter.com" target="_blank"
-                ><span>Twitter</span></a>
+              <a href="http://blogger.com" target="_blank"
+                ><span>Blogger</span></a>
+              <a href="http://pintrest.com" target="_blank">
+                <span>Pintrest</span></a>
+              <a href="http://youtube.com" target="_blank">
+                <span>YouTube</span></a>
+              <a href="http://twitter.com" target="_blank">
+                <span>Twitter</span></a>
             </nav>
             <nav class="menu">
               <a href="#">Terms</a>
